# AmveraProgectFastAPI

./: README.md  pyproject.toml
app/api/: router.py  schemas.py  utils.py
app/static/: script.js  style.css
app/templates/: index.html
