[tool.poetry]
name = "amerafastapi"
version = "0.1.0"
description = "Создание полного Fast-API сервиса с фронтендом и деплоем"
authors = ["AlexPopov"]
license = "test"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.30.6"
fastapi = "^0.112.1"
sqlalchemy = "^2.0.32"
psycopg2-binary = "^2.9.9"
asyncpg = "^0.29.0"
pydantic = "^2.8.2"
jinja2 = "^3.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
